# banknim

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: fdic_financial_fields_core.txt  project.smoke.yaml  project.yaml  source_manifest.csv
docs/: data.html  index.html  models.html
docs/css/: style.css
docs/data/: cross_section.json  distributions.json  event_study.json  geography.json  metadata.json  model_results.json  nim_trend_by_size.json  robustness_forest.json  rolling_coefficients.json  sample_selection.json  summary_statistics.json  threshold_crossing.json
docs/js/: theme.js
scripts/: 00_fetch_metadata.py  01_download_fdic_financials.py  02_download_fdic_sod.py  03_download_fdic_history.py  04_download_rates.py  05_stage_optional_ffiec_bulk.py  06_build_core_panel.py  07_build_sod_panel.py  08_run_baseline_regressions.py  09_event_study_acquirers.py  10_run_franchise_dilution.py  11_run_rate_cycle.py  12_run_threshold_crossing.py  13_run_robustness.py  14_run_extensions.py  15_export_frontend_data.py  16_run_nim_decomposition.py  17_run_equity_as_outcome.py  18_run_efficiency.py  19_run_loan_composition.py  20_run_failure_prediction.py  21_run_rolling_coefficients.py  98_prepare_smoke_fixture.py
src/nimscale/: __init__.py  bank_panel.py  fdic_api.py  geography.py  io.py  regression.py  settings.py  validation.py
tests/: test_fdic_api.py  test_frontend_data_contracts.py  test_geography.py  test_panel_helpers.py  test_pick_first_existing.py  test_pipeline_validation.py  test_validation.py
